force-app/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger_Handlers</pluralLabel>
</CustomObject>