force-app/main/default/objects/Trigger_Handler__mdt/fields/Condition_Class__c.field-meta.xml
<CustomField>
    <fullName>Condition_Class__c</fullName>
    <label>Condition Class</label>
    <length>128</length>
    <type>Text</type>
</CustomField>