force-app/main/default/objects/Trigger_Handler__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beforeInsert</fullName>
                <default>true</default>
                <label>beforeInsert</label>
            </value>
            <value>
                <fullName>beforeUpdate</fullName>
            </value>
            <value>
                <fullName>afterInsert</fullName>
            </value>
            <value>
                <fullName>afterUpdate</fullName>
            </value>
            <value>
                <fullName>beforeDelete</fullName>
            </value>
            <value>
                <fullName>afterDelete</fullName>
            </value>
            <value>
                <fullName>afterUndelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>