force-app/main/default/objects/Trigger_Handler__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>