force-app/main/default/objects/Trigger_Handler__mdt/fields/sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>sObject_Type__c</fullName>
    <label>sObject Type</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>